InternexDev_Sandbox/src/objects/WriteOff__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoices__c</fullName>
        <label>Invoice</label>
        <referenceTo>akritiv__Transaction__c</referenceTo>
        <relationshipLabel>WriteOffs</relationshipLabel>
        <relationshipName>WriteOffs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WriteOff_Amount__c</fullName>
        <label>WriteOff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>WriteOff</label>
    <nameField>
        <displayFormat>WO-{00000}</displayFormat>
        <label>WriteOff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WriteOffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>